# petrelpy

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  CONTRIBUTING.md  Facies_distribution_TACC.py  LICENSE  README.md  convert_perforation_petrel.py  convert_production_petrel.py  gslib.py  header.py  noxfile.py  property_distribution_PetreltoArc.py  pyproject.toml  tops_attributes.py  wellconnection.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml  tests.yml
docs/: conf.py  contributing.md  index.md  prepare_docstrings.py
docs/getting-started/: index.md
docs/reference/: index.md  index.rst  toctree.txt
docs/user-guide/: 11-minutes-to-petrelpy.ipynb  11-minutes-to-petrelpy.md  index.md
src/petrelpy/: __init__.py  __main__.py  cli.py  gslib.py  petrel.py  wellconnection.py
tests/: test_petrel.py
tests/data/: benchmark_perf.prn  test.ev  test.vol  test_duplicated.wcf  test_geomodel.csv  test_geomodel.gslib  test_heels.csv  test_monthly_prod.csv  test_monthly_prod.vol  test_perf.csv  test_perf.ev  test_wcf.csv  test_wcf.wcf  test_yearly_prod.csv
